--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,9 +8,9 @@
 	      	<li><a href="/">Home</a></li>
 	      	<% end %>
 	      	<% if controller_name == "projects" %>
-	      	<li class="active"><a href="projects#index">Projects</a></li>
+	      	<li class="active"><a href="projects">Projects</a></li>
 	      	<% else %>
-	      	<li><a href="projects#index">Projects</a></li>
+	      	<li><a href="projects">Projects</a></li>
 	      	<% end %>
 
 	    </ul>
