--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Listing Projects</h1>
 <div class="row">
   <div class="span9">
-		<ul>
+		<ul class="project-list">
 		<% @projects.each do |project| %>
-			<li><%= link_to project.title, "#" %></li>
+			<li><%= link_to project.title, project %></li>
 			<p><%= project.teaser %></p>
 		<% end %>
 		</ul>
