--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
 	<div class="container">
 	<%= render '/layouts/nav' %>
 
+	<% if flash[:notice] %>
+    	<div class="alert alert-success">
+      	<%= flash[:notice] %>
+    	</div>
+ 	<% end %>
+
 	<%= yield %>
 
 	</div>
