--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,19 +1,27 @@
-<div class="navbar">
-	<div class="navbar-inner">
-	    <a class="brand" href="/">CrowdFunder</a>
-	    <ul class="nav"> 
-	    	<% if controller_name == "home" %>
-	      	<li class="active"><a href="/">Home</a></li>
-	      	<% else %>
-	      	<li><a href="/">Home</a></li>
-	      	<% end %>
-	      	<% if controller_name == "projects" %>
-	      	<li class="active"><a href="projects">Projects</a></li>
-	      	<% else %>
-	      	<li><a href="projects">Projects</a></li>
-	      	<% end %>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <a class="brand" href="#">CrowdFunder</a>
+      <div class="nav-collapse collapse">
+        <ul class="nav">
+          <li class="<%= 'active' if @nav == :home %>">
+            <%= link_to 'Home', :root %>
+          </li>
+          <li class="<%= 'active' if @nav == :projects %>">
+            <%= link_to 'Projects', :projects %>
+          </li>
 
-	<div class="pull-right">
+          <% if logged_in? %>
+            <li class="divider-vertical"></li>
+            <li class="<%= 'active' if @nav == :my_projects %>">
+              <%= link_to 'My Projects', [:my, :projects] %>
+            <li>
+          <% end %>
+
+        </ul>
+      </div><!--/.nav-collapse -->
+
+      <div class="pull-right">
         <% if logged_in? %>
           <%= link_to 'Logout', :session, :method => :delete, class: 'btn' %>
         <% else %>
@@ -22,6 +30,6 @@
         <% end %>
       </div>
 
-	    </ul>
-	  </div>
-	</div>
+    </div>
+  </div>
+</div>
