--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,3 +2,7 @@
 	<p>
 		A project by: <%= @project.user.first_name %> <%= @project.user.last_name %>
 	</p>
+
+	<p>
+		<%= render '/project/pledges' %>
+	</p>
