--- a/app/views/pledges/new.html.erb
+++ b/app/views/pledges/new.html.erb
@@ -1,3 +1,11 @@
 <h1>Pledge for <%= @product.title %></h1>
 
-<%= form_for @pledge %>
+<%= form_for [@project, @pledge] do |f| %>
+
+	<%= render 'shared/forms_errors', :f => f %>
+	<%= f.label :amount %>
+	<%= f.text_field :amount %>
+
+	<div class="form-actions">
+		<%= f.submit 'Pledge Now' class=btn %>
+	</div>
