--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,8 @@
-<h1><%= @project.title %>>/h1>
-	<p>
-		A project by: <%= @project.user.first_name %> <%= @project.user.last_name %>
-	</p>
+<h1><%= @project.title %></h1>
+<p>
+	A project by: <%= @project.user.first_name %> <%= @project.user.last_name %>
+</p>
 
-	<p>
-		<%= render '/project/pledges' %>
-	</p>
+<hr/>
+
+<%= link_to 'Back This Project', [:new, @project, :pledge], class: 'btn btn-success btn-large' %>
