Generate 'my' controller and related views. Update sees so that my/projects shows a smaller set of projects.

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,7 +5,7 @@
     <ul class="nav">
       <li class="<%= 'active' if controller_name == 'home'%>"><a href="/">Home</a></li>
       <li class="<%= 'active' if controller_name == 'projects' %>">
-        <%= link_to "Projects", projects_url %>
+        <%= link_to "My Projects", my_projects_path %>
       </li>
     </ul>
 
