--- a/app/views/pledges/new.html.erb
+++ b/app/views/pledges/new.html.erb
@@ -7,5 +7,5 @@
 	<%= f.text_field :amount %>
 
 	<div class="form-actions">
-		<%= f.submit 'Pledge Now' class=btn %>
+		<%= f.submit 'Pledge Now', class='btn' %>
 	</div>
