Renamed partial to 'forms'. Attempted fixing 'my projects' in nav (still in process). Added one integration test. Made several other small edits and additions

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,6 +5,9 @@
     <ul class="nav">
       <li class="<%= 'active' if controller_name == 'home'%>"><a href="/">Home</a></li>
       <li class="<%= 'active' if controller_name == 'projects' %>">
+        <%= link_to "Projects", projects_path %>
+      </li>
+      <li class="<%= 'active' if controller_name == 'my/projects' %>">
         <%= link_to "My Projects", my_projects_path %>
       </li>
     </ul>
