--- a/app/views/my/projects/index.html.erb
+++ b/app/views/my/projects/index.html.erb
@@ -1,2 +1,12 @@
-<h1>My::Projects#index</h1>
-<p>Find me in app/views/my/projects/index.html.erb</p>
+<h1>My Projects</h1>
+<div class="row">
+  <div class="span9">
+		<ul class="project-list">
+		<% @projects.each do |project| %>
+			<li><%= link_to my.project.title, project %></li>
+			<p><%= project.teaser %></p>
+			<p><%= link_to 'Edit My Project', [:edit, :project], class: 'btn btn-primary'  %>
+		<% end %>
+		</ul>
+	</div>
+</div>
