--- a/app/views/pledges/new.html.erb
+++ b/app/views/pledges/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Pledge for <%= @product.title %></h1>
+<h1>Pledge for <%= @project.title %></h1>
 
 <%= form_for [@project, @pledge] do |f| %>
 
@@ -7,5 +7,7 @@
 	<%= f.text_field :amount %>
 
 	<div class="form-actions">
-		<%= f.submit 'Pledge Now', class='btn' %>
+		<%= f.submit 'Pledge Now', :class => 'btn' %>
 	</div>
+
+	<% end %>
