--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,9 +7,11 @@
       <li class="<%= 'active' if params[:controller] == 'projects' %>">
         <%= link_to "Projects", projects_path %>
       </li>
+      <% if logged_in? %>
       <li class="<%= 'active' if params[:controller] == 'my/projects' %>">
         <%= link_to "My Projects", my_projects_path %>
       </li>
+      <% end %>
     </ul>
 
       <div class="pull-right">
