--- a/app/views/my/projects/new.html.erb
+++ b/app/views/my/projects/new.html.erb
@@ -1,2 +1,28 @@
-<h1>My::Projects#new</h1>
-<p>Find me in app/views/my/projects/new.html.erb</p>
+<h1>Create a new CrowdFunder Project!</h1>
+<p>
+
+<%= form_for @project do |f| %>
+	<div class="span6">
+		<% unless f.object.errors.empty? %>
+			<div class="alert alert-error">
+				<strong>Try again after fixing the following things:</strong><br/>
+				<ul>
+					<% f.object.errors.full_messages.each do |msg| %>
+						<li><%= msg %></li>
+					<% end %>
+				</ul>
+			</div>
+		<% end %>
+	 	<%= f.text_field :title, placeholder: "Project title", class: "input-block-level" %>
+		<%= f.text_field :teaser, placeholder: "A short blurb about your project", class: "input-block-level" %>
+
+		<%= f.text_area :description, placeholder: "Describe your project!", class: "input-block-level" %>
+		<h3>Goal:</h3>
+		<%= f.number_field :goal, class: "input-block-level" %>
+
+		<div class="form-actions">
+			<%= f.submit 'Create Project', class: 'btn btn-primary' %>
+		</div>
+	</div>
+<% end %>
+</p>
