--- a/app/views/my/images/index.html.erb
+++ b/app/views/my/images/index.html.erb
@@ -1,18 +1,21 @@
 <h1><%= @project.title %></h1>
+<%= link_to 'Edit Project', edit_my_project_path(@project), class: 'btn btn-info'  %>
 <h4>Add Image</h4>
 <%= form_for [:my, @project, @image]  do |f| %>
-	<%= render 'shared/form_errors', :f => f %>
+	<%= render 'shared/forms_errors', :f => f %>
 	<%= f.file_field :file %>
 	<%= f.submit %>
 <% end %>
 
-<h4> This project has <%= @images.count %> images:</h4>
+<h4>This project has <%= @images.count %> images:</h4>
 
 <ul class="thumbnails">
 <% @images.each do |img| %>
 	<li class="span3">
 		<div class="thumbnail">
-			<img src="<%= img.file.url %>"></img>
+			<a href="<%= img.file.url %>" class="thumbnail">
+				<img src="<%= img.file.thumb.url %>"></img>
+			</a>
 		</div>
 	</li>
 <% end %>
