--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -1,5 +1,30 @@
-<h1><%= @project.title %></h1>
+<h1>Edit <%= @project.title %></h1>
 
-<p>
+<hr/>
 
-</p>
+<%= link to "Delete Project", my_project_path(@project), method: :delete, class: "btn btn-danger" %>
+
+<div class="well">
+	<%= link_to [:my, :projects], :class => 'btn btn-small' do %>
+		&laquo; My Projects
+	<% end %>
+
+	<div class="pull-right">
+		<%= link_to 'Delete Project', [:my, @project], :method => :delete, :class => 'btn btn-small btn-danger', :confirm => "Are you sure?" %>
+		<%= link_to 'Manage Images', [:my, @project, :images], :class => 'btn btn-small btn-primary' %>
+	</div>
+
+</div>
+
+<%= form_for [:my, @project] do |f| %>
+
+	<%= render 'shared/forms_errors', :f => f %>
+
+	<%# Automatically detects that we are trying to render a form and looks for _form template %>
+	<%= render f %>
+
+	<div class="form-actions">
+		<%= f.submit 'Update Project', class: 'btn' %>
+	</div>
+
+<% end %>
