--- a/app/views/my/projects/new.html.erb
+++ b/app/views/my/projects/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create a new CrowdFunder Project!</h1>
 <p>
 
-<%= form_for @project do |f| %>
+<%= form_for [:my, @project] do |f| %>
 	<div class="span6">
 		<% unless f.object.errors.empty? %>
 			<div class="alert alert-error">
@@ -14,11 +14,10 @@
 			</div>
 		<% end %>
 	 	<%= f.text_field :title, placeholder: "Project title", class: "input-block-level" %>
+		<%= f.number_field :goal, placeholder: "How much are you trying to raise?"class: "input-block-level" %>
 		<%= f.text_field :teaser, placeholder: "A short blurb about your project", class: "input-block-level" %>
 
 		<%= f.text_area :description, placeholder: "Describe your project!", class: "input-block-level" %>
-		<h3>Goal:</h3>
-		<%= f.number_field :goal, class: "input-block-level" %>
 
 		<div class="form-actions">
 			<%= f.submit 'Create Project', class: 'btn btn-primary' %>
